--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -21,9 +21,9 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="700"/>
-			<integer value="78"/>
 			<integer value="650"/>
+			<integer value="78"/>
+			<integer value="665"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -367,7 +367,7 @@
 			<object class="NSWindowTemplate" id="972006081">
 				<int key="NSWindowStyleMask">15</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{15, 117}, {686, 719}}</string>
+				<string key="NSWindowRect">{{15, 49}, {1006, 787}}</string>
 				<int key="NSWTFlags">1954021376</int>
 				<string key="NSWindowTitle">Photobooth</string>
 				<string key="NSWindowClass">NSWindow</string>
@@ -388,10 +388,10 @@
 									<string>NSFilenamesPboardType</string>
 								</object>
 							</object>
-							<string key="NSFrame">{{0, 158}, {686, 561}}</string>
+							<string key="NSFrame">{{0, 158}, {1006, 629}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<bool key="NSViewIsLayerTreeHost">YES</bool>
-							<float key="zoomFactor">0.26796874403953552</float>
+							<float key="zoomFactor">0.39296874403953552</float>
 							<float key="rotationAngle">0.0</float>
 							<string key="currentToolMode">IKToolModeNone</string>
 							<bool key="autoresizes">YES</bool>
@@ -571,7 +571,7 @@
 											<string>NeXT TIFF v4.0 pasteboard type</string>
 										</object>
 									</object>
-									<string key="NSFrame">{{26, 1}, {633, 94}}</string>
+									<string key="NSFrame">{{26, 1}, {953, 94}}</string>
 									<reference key="NSSuperview" ref="337356213"/>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<bool key="constrainsToOriginalSize">NO</bool>
@@ -590,7 +590,7 @@
 								<object class="NSButton" id="956042436">
 									<reference key="NSNextResponder" ref="337356213"/>
 									<int key="NSvFlags">265</int>
-									<string key="NSFrame">{{659, 0}, {27, 96}}</string>
+									<string key="NSFrame">{{979, 0}, {27, 96}}</string>
 									<reference key="NSSuperview" ref="337356213"/>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<bool key="NSEnabled">YES</bool>
@@ -642,7 +642,7 @@
 									</object>
 								</object>
 							</object>
-							<string key="NSFrame">{{0, 20}, {686, 96}}</string>
+							<string key="NSFrame">{{0, 20}, {1006, 96}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSViewCanDrawConcurrently">YES</bool>
@@ -651,7 +651,7 @@
 						<object class="NSTextField" id="157119444">
 							<reference key="NSNextResponder" ref="439893737"/>
 							<int key="NSvFlags">258</int>
-							<string key="NSFrame">{{2, 2}, {687, 17}}</string>
+							<string key="NSFrame">{{2, 2}, {1007, 17}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -688,8 +688,8 @@
 								<bool key="EncodedWithXMLCoder">YES</bool>
 								<object class="NSButton" id="913861524">
 									<reference key="NSNextResponder" ref="701369770"/>
-									<int key="NSvFlags">256</int>
-									<string key="NSFrame">{{585, 3}, {96, 32}}</string>
+									<int key="NSvFlags">301</int>
+									<string key="NSFrame">{{902, 3}, {96, 32}}</string>
 									<reference key="NSSuperview" ref="701369770"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSButtonCell" key="NSCell" id="656467749">
@@ -713,7 +713,7 @@
 								<object class="NSButton" id="837888027">
 									<reference key="NSNextResponder" ref="701369770"/>
 									<int key="NSvFlags">301</int>
-									<string key="NSFrame">{{324, 1}, {39, 38}}</string>
+									<string key="NSFrame">{{484, 1}, {39, 38}}</string>
 									<reference key="NSSuperview" ref="701369770"/>
 									<int key="NSViewLayerContentsRedrawPolicy">2</int>
 									<bool key="NSViewCanDrawConcurrently">YES</bool>
@@ -741,14 +741,14 @@
 									</object>
 								</object>
 							</object>
-							<string key="NSFrame">{{0, 115}, {686, 43}}</string>
+							<string key="NSFrame">{{0, 115}, {1006, 43}}</string>
 							<reference key="NSSuperview" ref="439893737"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSViewCanDrawConcurrently">YES</bool>
 							<string key="NSClassName">NSView</string>
 						</object>
 					</object>
-					<string key="NSFrameSize">{686, 719}</string>
+					<string key="NSFrameSize">{1006, 787}</string>
 					<reference key="NSSuperview"/>
 					<int key="NSViewLayerContentsRedrawPolicy">2</int>
 				</object>
@@ -758,11 +758,12 @@
 			<object class="NSWindowTemplate" id="690207025">
 				<int key="NSWindowStyleMask">3</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{0, 0}, {640, 433}}</string>
+				<string key="NSWindowRect">{{0, 154}, {632, 279}}</string>
 				<int key="NSWTFlags">611845120</int>
 				<string key="NSWindowTitle">Preferences Window</string>
 				<string key="NSWindowClass">NSWindow</string>
 				<nil key="NSViewClass"/>
+				<string key="NSWindowContentMaxSize">{1.79769e+308, 1.79769e+308}</string>
 				<object class="NSView" key="NSWindowView" id="808708908">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -771,7 +772,7 @@
 						<object class="NSButton" id="940165348">
 							<reference key="NSNextResponder" ref="808708908"/>
 							<int key="NSvFlags">256</int>
-							<string key="NSFrame">{{530, 7}, {96, 32}}</string>
+							<string key="NSFrame">{{522, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="808708908"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="612634239">
@@ -790,7 +791,7 @@
 						</object>
 						<object class="NSBox" id="681084876">
 							<reference key="NSNextResponder" ref="808708908"/>
-							<string key="NSFrame">{{20, 62}, {600, 5}}</string>
+							<string key="NSFrame">{{20, 67}, {592, 5}}</string>
 							<reference key="NSSuperview" ref="808708908"/>
 							<string key="NSOffsets">{0, 0}</string>
 							<object class="NSTextFieldCell" key="NSTitleCell">
@@ -820,7 +821,7 @@
 						<object class="NSButton" id="402640695">
 							<reference key="NSNextResponder" ref="808708908"/>
 							<int key="NSvFlags">256</int>
-							<string key="NSFrame">{{14, 7}, {103, 32}}</string>
+							<string key="NSFrame">{{14, 12}, {103, 32}}</string>
 							<reference key="NSSuperview" ref="808708908"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="694388899">
@@ -840,7 +841,7 @@
 						<object class="NSTextField" id="270181411">
 							<reference key="NSNextResponder" ref="808708908"/>
 							<int key="NSvFlags">256</int>
-							<string key="NSFrame">{{145, 43}, {478, 17}}</string>
+							<string key="NSFrame">{{145, 48}, {470, 17}}</string>
 							<reference key="NSSuperview" ref="808708908"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="102697938">
@@ -853,21 +854,10 @@
 								<reference key="NSTextColor" ref="189391191"/>
 							</object>
 						</object>
-						<object class="IKDeviceBrowserView" id="599963882">
-							<reference key="NSNextResponder" ref="808708908"/>
-							<int key="NSvFlags">274</int>
-							<string key="NSFrame">{{21, 73}, {599, 340}}</string>
-							<reference key="NSSuperview" ref="808708908"/>
-							<bool key="displaysLocalCameras">YES</bool>
-							<bool key="displaysNetworkCameras">NO</bool>
-							<bool key="displaysLocalScanners">NO</bool>
-							<bool key="displaysNetworkScanners">NO</bool>
-							<int key="mode">1</int>
-						</object>
 						<object class="NSButton" id="32128169">
 							<reference key="NSNextResponder" ref="808708908"/>
-							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{439, 7}, {96, 32}}</string>
+							<int key="NSvFlags">256</int>
+							<string key="NSFrame">{{431, 12}, {96, 32}}</string>
 							<reference key="NSSuperview" ref="808708908"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="1054775661">
@@ -886,8 +876,8 @@
 						</object>
 						<object class="NSTextField" id="575007482">
 							<reference key="NSNextResponder" ref="808708908"/>
-							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{23, 43}, {120, 17}}</string>
+							<int key="NSvFlags">256</int>
+							<string key="NSFrame">{{23, 48}, {120, 17}}</string>
 							<reference key="NSSuperview" ref="808708908"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="463416645">
@@ -900,8 +890,67 @@
 								<reference key="NSTextColor" ref="189391191"/>
 							</object>
 						</object>
+						<object class="NSScrollView" id="588858399">
+							<reference key="NSNextResponder" ref="808708908"/>
+							<int key="NSvFlags">274</int>
+							<object class="NSMutableArray" key="NSSubviews">
+								<bool key="EncodedWithXMLCoder">YES</bool>
+								<object class="NSClipView" id="139959723">
+									<reference key="NSNextResponder" ref="588858399"/>
+									<int key="NSvFlags">2304</int>
+									<object class="NSMutableArray" key="NSSubviews">
+										<bool key="EncodedWithXMLCoder">YES</bool>
+										<object class="IKDeviceBrowserView" id="599963882">
+											<reference key="NSNextResponder" ref="139959723"/>
+											<int key="NSvFlags">274</int>
+											<string key="NSFrameSize">{590, 174}</string>
+											<reference key="NSSuperview" ref="139959723"/>
+											<bool key="displaysLocalCameras">YES</bool>
+											<bool key="displaysNetworkCameras">NO</bool>
+											<bool key="displaysLocalScanners">NO</bool>
+											<bool key="displaysNetworkScanners">NO</bool>
+											<int key="mode">1</int>
+										</object>
+									</object>
+									<string key="NSFrame">{{1, 1}, {590, 174}}</string>
+									<reference key="NSSuperview" ref="588858399"/>
+									<reference key="NSNextKeyView" ref="599963882"/>
+									<reference key="NSDocView" ref="599963882"/>
+									<reference key="NSBGColor" ref="298701303"/>
+									<int key="NScvFlags">4</int>
+								</object>
+								<object class="NSScroller" id="577200238">
+									<reference key="NSNextResponder" ref="588858399"/>
+									<int key="NSvFlags">-2147483392</int>
+									<string key="NSFrame">{{576, 1}, {15, 199}}</string>
+									<reference key="NSSuperview" ref="588858399"/>
+									<reference key="NSTarget" ref="588858399"/>
+									<string key="NSAction">_doScroller:</string>
+									<double key="NSCurValue">1</double>
+									<double key="NSPercent">0.96363627910614014</double>
+								</object>
+								<object class="NSScroller" id="175320949">
+									<reference key="NSNextResponder" ref="588858399"/>
+									<int key="NSvFlags">-2147483392</int>
+									<string key="NSFrame">{{-100, -100}, {583, 15}}</string>
+									<reference key="NSSuperview" ref="588858399"/>
+									<int key="NSsFlags">1</int>
+									<reference key="NSTarget" ref="588858399"/>
+									<string key="NSAction">_doScroller:</string>
+									<double key="NSPercent">0.50602412223815918</double>
+								</object>
+							</object>
+							<string key="NSFrame">{{20, 83}, {592, 176}}</string>
+							<reference key="NSSuperview" ref="808708908"/>
+							<reference key="NSNextKeyView" ref="139959723"/>
+							<bool key="NSViewCanDrawConcurrently">YES</bool>
+							<int key="NSsFlags">562</int>
+							<reference key="NSVScroller" ref="577200238"/>
+							<reference key="NSHScroller" ref="175320949"/>
+							<reference key="NSContentView" ref="139959723"/>
+						</object>
 					</object>
-					<string key="NSFrameSize">{640, 433}</string>
+					<string key="NSFrameSize">{632, 279}</string>
 					<reference key="NSSuperview"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -1592,12 +1641,12 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="681084876"/>
-							<reference ref="32128169"/>
-							<reference ref="940165348"/>
 							<reference ref="402640695"/>
 							<reference ref="575007482"/>
 							<reference ref="270181411"/>
-							<reference ref="599963882"/>
+							<reference ref="588858399"/>
+							<reference ref="940165348"/>
+							<reference ref="32128169"/>
 						</object>
 						<reference key="parent" ref="690207025"/>
 					</object>
@@ -1682,14 +1731,35 @@
 						<reference key="parent" ref="337356213"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">682</int>
-						<reference key="object" ref="599963882"/>
-						<reference key="parent" ref="808708908"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">737</int>
 						<reference key="object" ref="490519373"/>
 						<reference key="parent" ref="720053764"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">739</int>
+						<reference key="object" ref="588858399"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="577200238"/>
+							<reference ref="175320949"/>
+							<reference ref="599963882"/>
+						</object>
+						<reference key="parent" ref="808708908"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">740</int>
+						<reference key="object" ref="577200238"/>
+						<reference key="parent" ref="588858399"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">741</int>
+						<reference key="object" ref="175320949"/>
+						<reference key="parent" ref="588858399"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">682</int>
+						<reference key="object" ref="599963882"/>
+						<reference key="parent" ref="588858399"/>
 					</object>
 				</object>
 			</object>
@@ -1868,9 +1938,9 @@
 					<integer value="1"/>
 					<string>{74, 862}</string>
 					<string>{{6, 978}, {478, 20}}</string>
-					<string>{{414, 137}, {686, 719}}</string>
+					<string>{{90, 69}, {1006, 787}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{414, 137}, {686, 719}}</string>
+					<string>{{90, 69}, {1006, 787}}</string>
 					<integer value="1"/>
 					<string>{{33, 99}, {480, 360}}</string>
 					<string>{3.40282e+38, 3.40282e+38}</string>
@@ -1899,9 +1969,9 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{427, 417}, {640, 433}}</string>
+					<string>{{427, 571}, {632, 279}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{427, 417}, {640, 433}}</string>
+					<string>{{427, 571}, {632, 279}}</string>
 					<boolean value="NO"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1948,7 +2018,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">738</int>
+			<int key="maxID">742</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2757,6 +2827,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">AppKit.framework/Headers/NSResponder.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSScrollView</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">AppKit.framework/Headers/NSScrollView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
